重构: 光照显示数字改成纹理，降低CPU开销